--- a/_posts/2023-10-19-qdaif.markdown
+++ b/_posts/2023-10-19-qdaif.markdown
@@ -7,9 +7,9 @@ bgcolor: "#ffffd0"
 categories: research
 author: "Andrew Dai"
 authors: "Herbie Bradley&ast;, <strong>Andrew Dai&ast;</strong>, Hannah Teufel, Jenny Zhang, Koen Oostermeijer, Marco Bellagente, Jeff Clune, Kenneth Stanley, Grégory Schott, Joel Lehman"
-venue: "arXiv (submitted, to be announced)"
+venue: "arXiv"
 main: https://qdaif.github.io
-arxiv: https://qdaif.github.io
+arxiv: https://arxiv.org/abs/2310.13032
 code: https://github.com/CarperAI/OpenELM
 website: https://qdaif.github.io
 blog: https://carper.ai/quality-diversity-through-ai-feedback/
